# vaultmind

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml
docs/: VaultMind-SRS-v1.0.docx
scripts/: setup-dev.sh
src/: App.svelte
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/agent-runtime/: Cargo.toml
src-tauri/crates/agent-runtime/src/: agent.rs  audit.rs  budget.rs  client.rs  heartbeat.rs  lib.rs  orchestrator.rs  registry.rs  tasks.rs  team_chat.rs  tools.rs
src-tauri/crates/core-storage/: Cargo.toml
src-tauri/crates/core-storage/src/: database.rs  error.rs  file_ops.rs  git_ops.rs  lib.rs  migrations.rs  models.rs  parser.rs  vector_store.rs
src-tauri/crates/core-storage/src/watcher/: events.rs  filter.rs  mod.rs  watcher_impl.rs
src-tauri/crates/graph-engine/: Cargo.toml
src-tauri/crates/graph-engine/src/: graph.rs  lib.rs
src-tauri/crates/indexer/: Cargo.toml
src-tauri/crates/indexer/src/: chunker.rs  embedder.rs  extractors.rs  lib.rs  parser.rs  pipeline.rs  plugin.rs
src-tauri/crates/retriever/: Cargo.toml
src-tauri/crates/retriever/src/: error.rs  hybrid.rs  lib.rs  models.rs  search.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: ChatPanel.svelte  FileTree.svelte  GraphView.svelte  NewNoteButton.svelte  NoteEditor.svelte  SearchModal.svelte  SettingsView.svelte  Sidebar.svelte  TagAutocomplete.svelte  TagPanel.svelte  TipTapEditor.svelte  WikilinkAutocomplete.svelte
src/lib/extensions/: Wikilink.ts  WikilinkSuggestion.ts
src/lib/stores/: settings.ts  vault-actions.ts  vault.ts
