[workspace]
members = [
    ".",
    "crates/core-storage",
    "crates/indexer",
    "crates/graph-engine",
    "crates/retriever",
    "crates/agent-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Aldiansyahahah/vaultmind"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
tantivy = "0.22"

# Graph
petgraph = "0.6"

# Markdown
pulldown-cmark = "0.12"

# Embedding
ort = "2"

# HTTP (for LLM API calls)
reqwest = { version = "0.12", features = ["json"] }

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

[package]
name = "vaultmind"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core-storage = { path = "crates/core-storage" }
indexer = { path = "crates/indexer" }
graph-engine = { path = "crates/graph-engine" }
retriever = { path = "crates/retriever" }
agent-runtime = { path = "crates/agent-runtime" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "vaultmind_lib"
crate-type = ["lib", "cdylib", "staticlib"]
