[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM integration and tool-calling agent"

[dependencies]
core-storage = { path = "../core-storage" }
retriever = { path = "../retriever" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
