[package]
name = "core-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "File I/O, SQLite metadata, and LanceDB vector storage for VaultMind"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rusqlite.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true

[dev-dependencies]
tempfile = "3"
