[package]
name = "graph-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Knowledge graph construction and traversal"

[dependencies]
core-storage = { path = "../core-storage" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
petgraph.workspace = true
