[package]
name = "indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Markdown AST parsing, smart chunking, and embedding generation"

[dependencies]
core-storage = { path = "../core-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
pulldown-cmark.workspace = true
ort.workspace = true

[dev-dependencies]
tempfile = "3"
